adjust submodule: card-platform-library

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/reference"]
 	path = src/reference
 	url = https://github.com/chienaeae/card-platform-library.git
+[submodule "src/reference/card-platform-library"]
+	path = src/reference/card-platform-library
+	url = https://github.com/chienaeae/card-platform-library.git
