--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf ./dist && tsc",
+    "start": "cross-env NODE_ENV=production node ./dist/index.js",
+    "start:dev": "nodemon",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +17,13 @@
     "@types/node": "^16.11.1",
     "jest": "^27.3.0",
     "nodemon": "^2.0.13",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.3.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "card-platform-library": "file:src/reference/card-platform-library",
+    "sqs-consumer": "^5.6.0"
   }
 }
