--- a/.env.schema
+++ b/.env.schema
@@ -1,11 +1,10 @@
-AWS_SECRET_ACCESS_KEY=
+SQS_REGION=
 AWS_ACCESS_KEY_ID=
-DEV_QUEUE_NAME=
-DEV_ORDERING_PROCESS_QUEUE_URL=
-DEV_ORDERING_PROCESS_REGION=
-TEST_QUEUE_NAME=
-TEST_ORDERING_PROCESS_QUEUE_URL=
-TEST_ORDERING_PROCESS_REGIO=
-PROD_QUEUE_NAME=
-PROD_ORDERING_PROCESS_QUEUE_URL=
-PROD_ORDERING_PROCESS_REGION=
+AWS_SECRET_ACCESS_KEY=
+# Ordering queue
+DEV_ORDERING_QUEUE_URL=
+DEV_ORDERING_QUEUE_NAME=
+TEST_ORDERING_QUEUE_URL=
+TEST_ORDERING_QUEUE_NAME=
+PROD_ORDERING_QUEUE_URL=
+PROD_ORDERING_QUEUE_NAME=
